# FPauth

./: .gitignore  FPauth-core.opam  FPauth-responses.opam  FPauth-strategies.opam  FPauth.opam  LICENSE.md  Makefile  README.md  index.html
.github/workflows/: doc.yml
FPauth/: index.html
FPauth-core/: index.html
FPauth-core/FPauth_core/: index.html
FPauth-core/FPauth_core/Auth_sign/: index.html
FPauth-core/FPauth_core/Auth_sign/module-type-AUTHENTICATOR/: index.html
FPauth-core/FPauth_core/Auth_sign/module-type-MODEL/: index.html
FPauth-core/FPauth_core/Auth_sign/module-type-RESPONSES/: index.html
FPauth-core/FPauth_core/Auth_sign/module-type-ROUTER/: index.html
FPauth-core/FPauth_core/Auth_sign/module-type-SESSIONMANAGER/: index.html
FPauth-core/FPauth_core/Auth_sign/module-type-STRATEGY/: index.html
FPauth-core/FPauth_core/Auth_sign/module-type-VARIABLES/: index.html
FPauth-core/FPauth_core/Authenticator/: index.html
FPauth-core/FPauth_core/Authenticator/Make/: index.html
FPauth-core/FPauth_core/Authenticator/Make/argument-1-M/: index.html
FPauth-core/FPauth_core/Authenticator/Make/argument-2-V/: index.html
FPauth-core/FPauth_core/Make_Auth/: index.html
FPauth-core/FPauth_core/Make_Auth/Authenticator/: index.html
FPauth-core/FPauth_core/Make_Auth/Router/: index.html
FPauth-core/FPauth_core/Make_Auth/Session_manager/: index.html
FPauth-core/FPauth_core/Make_Auth/Variables/: index.html
FPauth-core/FPauth_core/Make_Auth/argument-1-M/: index.html
FPauth-core/FPauth_core/Router/: index.html
FPauth-core/FPauth_core/Router/Make/: index.html
FPauth-core/FPauth_core/Router/Make/argument-1-M/: index.html
FPauth-core/FPauth_core/Router/Make/argument-2-A/: index.html
FPauth-core/FPauth_core/Router/Make/argument-3-V/: index.html
FPauth-core/FPauth_core/Session_manager/: index.html
FPauth-core/FPauth_core/Session_manager/Make/: index.html
FPauth-core/FPauth_core/Session_manager/Make/argument-1-M/: index.html
FPauth-core/FPauth_core/Session_manager/Make/argument-2-V/: index.html
FPauth-core/FPauth_core/Static/: index.html
FPauth-core/FPauth_core/Static/AuthResult/: index.html
FPauth-core/FPauth_core/Static/Params/: index.html
FPauth-core/FPauth_core/Static/StratResult/: index.html
FPauth-core/FPauth_core/Static/StratResult/Infix/: index.html
FPauth-core/FPauth_core/Variables/: index.html
FPauth-core/FPauth_core/Variables/Make/: index.html
FPauth-core/FPauth_core/Variables/Make/argument-1-M/: index.html
FPauth-responses/: index.html
FPauth-responses/FPauth_responses/: index.html
FPauth-responses/FPauth_responses/HTML/: index.html
FPauth-responses/FPauth_responses/HTML/Make/: index.html
FPauth-responses/FPauth_responses/HTML/Make/argument-1-V/: index.html
FPauth-responses/FPauth_responses/HTML/module-type-HTML_settings/: index.html
FPauth-responses/FPauth_responses/JSON/: index.html
FPauth-responses/FPauth_responses/JSON/Make/: index.html
FPauth-responses/FPauth_responses/JSON/module-type-MODEL/: index.html
FPauth-strategies/: index.html
FPauth-strategies/FPauth_strategies/: index.html
FPauth-strategies/FPauth_strategies/Password/: index.html
FPauth-strategies/FPauth_strategies/Password/Make/: index.html
FPauth-strategies/FPauth_strategies/Password/module-type-MODEL/: index.html
FPauth-strategies/FPauth_strategies/TOTP/: index.html
FPauth-strategies/FPauth_strategies/TOTP/JSON_Responses/: index.html
FPauth-strategies/FPauth_strategies/TOTP/Make/: index.html
FPauth-strategies/FPauth_strategies/TOTP/Make_HTML_Responses/: index.html
FPauth-strategies/FPauth_strategies/TOTP/module-type-HTML_settings/: index.html
FPauth-strategies/FPauth_strategies/TOTP/module-type-MODEL/: index.html
FPauth-strategies/FPauth_strategies/TOTP/module-type-RESPONSES/: index.html
FPauth/FPauth/: index.html
FPauth/FPauth/Make_Auth/: index.html
FPauth/FPauth/Make_Auth/Authenticator/: index.html
FPauth/FPauth/Make_Auth/Router/: index.html
FPauth/FPauth/Make_Auth/Session_manager/: index.html
FPauth/FPauth/Make_Auth/Variables/: index.html
FPauth/FPauth/Make_Auth/argument-1-M/: index.html
FPauth/FPauth__core/: index.html
src/: FPauth.ml  FPauth.mli  dune
src/core/: FPauth_core.ml  FPauth_core.mli  auth_sign.ml  authenticator.ml  dune  router.ml  session_manager.ml  static.ml  static.mli  variables.ml
src/responses/: FPauth_responses.ml  HTML.ml  JSON.ml  dune  html_pages.eml.ml
src/strategies/: FPauth_strategies.ml  TOTP.ml  TOTP.mli  TOTP_pages.eml.ml  dune  otp.ml  password.ml  password.mli
test/core/: authenticator.ml  dune  router.ml  session_manager.ml  setup.ml  static.ml  unit.ml
test/strategies/: dune  otp.ml  password.ml  setup.ml  totp.ml  unit.ml
(+9 files in other folders)
