opam-version: "2.0"

name: "FPauth"
version: "1.0.0"
license: "MIT"

synopsis: "Easy authentication system for Dream framework"
description:"""
FPauth is an easy user authentication system for Dream web-framework. 

The main idea behind the system is that user authentication is done via running sets of Strategies, 
and when one of them succeeds, user is considered to be authenticated. Authentication status is controlled by a middleware 
standing downstream of session middleware.

The system allows to:
- Control authentication in web-session;
- Get authentication status for each request via `Dream.field`;
- Check user identity with strategies;
- Use built-in strategies or custom ones;
- Add all routes for authentication and strategies at once;
- Add your own representations of authentication events or use built-in;
- Use built-in handlers or write your own;
- Extract params for authentication from requests.
"""

homepage: "https://github.com/mikeGEINE/FPauth"
bug-reports: "https://github.com/mikeGEINE/FPauth/issues"
dev-repo: "git+https://github.com/mikeGEINE/FPauth.git"

authors: ["Mikhail Geine <mike.geine@gmail.com>"
          "Pavel Argentov <argentoff@gmail.com>"]
maintainer: "Mikhail Geine <mike.geine@gmail.com>"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]

run-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
    "dream" {>="1.0.0~alpha3"}
    "ocaml" {>="4.12.0"}
    "dune" {>="2.7"}
    "base" 
    "FPauth-core" {= version}
    "FPauth-strategies" {= version}
    "FPauth-responses" {= version}

    #Testing, development
    "alcotest" {with-test}
    "bisect_ppx" {with-test & >= "2.5.0"}  # --instrument-with.
    "odoc" {with-doc}
]