(library
 (name FPauth_strategies)
 (public_name FPauth-strategies)
 (libraries base FPauth-core argon2 twostep)
 (preprocess
  (pps lwt_ppx))
  (instrumentation (backend bisect_ppx)))

(rule
 (deps TOTP_pages.eml.ml)
 (targets TOTP_pages.ml)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
